<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sample</groupId>
		<artifactId>sample-gefapp</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<artifactId>org.sample.gefapp.diagram.client</artifactId>
	<packaging>war</packaging>

	<properties>
        <gwt.module>org.sample.gefapp.model.EntitiesApp</gwt.module>
        <gwt.style>OBF</gwt.style>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.sample</groupId>
			<artifactId>org.sample.gefapp.diagram</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>

				<dependencies>
					<dependency>
						<groupId>com.google.gwt</groupId>
						<artifactId>gwt-dev</artifactId>
						<version>${gwtVersion}</version>
					</dependency>
					<dependency>
						<groupId>com.google.gwt</groupId>
						<artifactId>gwt-user</artifactId>
						<version>${gwtVersion}</version>
					</dependency>
				</dependencies>

				<!-- JS is only needed in the package phase, this speeds up testing -->
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>

				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin
					documentation at codehaus.org -->
				<configuration>
					<!-- URL that should be automatically opened in the GWT shell (gwt:run). -->
					<runTarget>index.html</runTarget>
					<!-- Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) -->
					<compileReport>true</compileReport>
					<module>${gwt.module}</module>
					<!-- <appEngineVersion>${gae.version}</appEngineVersion> -->
					<!-- <appEngineHome>${gae.home}</appEngineHome> -->
					<logLevel>TRACE</logLevel>
					<style>${gwt.style}</style>
					<warSourceDirectory>webapp</warSourceDirectory>
					<extraJvmArgs>-Xss512m -Xmx1024m -XX:MaxPermSize=1024m</extraJvmArgs>
					<!-- <server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server> -->
					<copyWebapp>true</copyWebapp>
				</configuration>
			</plugin>

			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.2</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
							<resources>
								<resource>
									<directory>webapp</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src</directory>
				<includes>
					<include>**/*.java</include>
					<include>**/*.gif</include>
					<include>**/*.png</include>
					<include>**/*.gwt.xml</include>
				</includes>
			</resource>
		</resources>
	</build>

</project>
